--- a/erpnext/templates/form_grid/item_grid.html
+++ b/erpnext/templates/form_grid/item_grid.html
@@ -22,6 +22,13 @@
 				</span></p>
 			{% } %}
 			{% include "templates/form_grid/includes/visible_cols.html" %}
+			{% if(in_list(["Sales Order Item", "Sales Invoice Item", "Delivery Note Item"],doc.doctype)) { %}
+			{% if(doc.stop_status=='Yes') { %}
+				<div><strong>Stopped : </strong><span style="color:red">{%= doc.stop_status %}</span></div>
+			{% } else { %}
+				<div><b>Stopped : </b><span style="color:green">No</span></div>
+			{% } %}
+			{% } %}
 			{% if(doc.schedule_date) { %}
 			<div><span title="{%= __("Reqd By Date") %}" class="label {%=
 				(frappe.datetime.get_diff(doc.schedule_date) < 1
