--- a/erpnext/templates/form_grid/item_grid.html
+++ b/erpnext/templates/form_grid/item_grid.html
@@ -23,7 +23,7 @@
 			{% } %}
 			{% include "templates/form_grid/includes/visible_cols.html" %}
 			{% if(in_list(["Sales Order Item", "Sales Invoice Item", "Delivery Note Item"],doc.doctype)) { %}
-			{% if(doc.stop_status=='Yes') { %}
+			{% if(doc.stop_status=="Yes") { %}
 				<div><strong>Stopped : </strong><span style="color:red">{%= doc.stop_status %}</span></div>
 			{% } else { %}
 				<div><b>Stopped : </b><span style="color:green">No</span></div>
